# q

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  build.sh  git-flatten.sh  q-launch.sh
Q/: CMakeLists.txt
Q/src/: codeeditor.h  environmentpane.cpp  environmentpane.h  main.cpp  mainwindow.cpp  mainwindow.h  rconsole.cpp  rprocess.cpp  thememanager.cpp  thememanager.h
pkg/q-r-ide/: .BUILDINFO  .PKGINFO
pkg/q-r-ide/usr/share/applications/: q.desktop
qiderpkg/: DESCRIPTION  NAMESPACE
qiderpkg/R/: core.R
src/: codeeditor.cpp  environmentpane.cpp  filebrowser.cpp  filebrowser.h  mainwindow.cpp  mainwindow.h  rconsole.cpp  rconsole.h  rprocess.h  rsyntaxhighlighter.cpp  rsyntaxhighlighter.h  terminalwidget.cpp  terminalwidget.h  thememanager.cpp  thememanager.h
